Adds column-data endpoint (#122)
